update race